Closed
Bug 225003
Opened 22 years ago
Closed 22 years ago
Typo in spellchecker code
Categories
(SeaMonkey :: Composer, defect)
SeaMonkey
Composer
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: pkwarren, Assigned: mkaply)
Details
(Keywords: crash)
Attachments
(1 file)
|
602 bytes,
patch
|
mkaply
:
review+
mkaply
:
superreview+
|
Details | Diff | Splinter Review |
http://webtools.mozilla.org/bonsai/cvsblame.cgi?file=mozilla/extensions/spellcheck/myspell/src/mozMySpell.cpp&root=/cvsroot&rev=1.2&mark=151-172–
It looks like in the code above, the line:
if(aLanguage){
res = NS_ERROR_NULL_POINTER;
}
should be changed to:
if(!aLanguage){
res = NS_ERROR_NULL_POINTER;
}
r=me i have this in a tree somewhere, i actually crashed because of it.
| Reporter | ||
Comment 2•22 years ago
|
||
| Reporter | ||
Updated•22 years ago
|
Attachment #135032 -
Flags: superreview?(mkaply)
Attachment #135032 -
Flags: review?(timeless)
| Assignee | ||
Comment 3•22 years ago
|
||
Comment on attachment 135032 [details] [diff] [review]
Patch v1
timeless already r=
sr=me since I kind of own spellchecker
Attachment #135032 -
Flags: superreview?(mkaply)
Attachment #135032 -
Flags: superreview+
Attachment #135032 -
Flags: review?(timeless)
Attachment #135032 -
Flags: review+
| Reporter | ||
Comment 4•22 years ago
|
||
Fixed:
Checking in mozMySpell.cpp;
/cvsroot/mozilla/extensions/spellcheck/myspell/src/mozMySpell.cpp,v <--
mozMySpell.cpp
new revision: 1.3; previous revision: 1.2
done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 5•22 years ago
|
||
So, is this bugfix can kill bug 225361 "Spellchecker crash" ?
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•