Bug 225003 - Typo in spellchecker code r=timeless@myrealbox.com, sr=mkaply@us.ibm.com